--- a/style/_button.scss
+++ b/style/_button.scss
@@ -13,6 +13,7 @@
   margin: 4px 2px;
   cursor: pointer;
 }
+
 @mixin coloredButton($color, $fontSize) {
   background-color: $color;
   border-radius: 10%;
@@ -21,6 +22,19 @@
   border: none;
   font-size: $fontSize;
   color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+@mixin aWhiteButton($fontSize) {
+  background-color: white;
+  border-radius: 10%;
+  padding: 8px 22px;
+  border: 1px solid black;
+  font-size: $fontSize;
+  color: black;
   text-align: center;
   text-decoration: none;
   display: inline-block;
