--- a/style/main.css
+++ b/style/main.css
@@ -1,1 +1,126 @@
-/* No CSS *//*# sourceMappingURL=main.css.map */
+#uploadSection {
+  width: 90%;
+  margin: 0 5%;
+}
+
+#uploadSection .uploadContainer {
+  display: -ms-grid;
+  display: grid;
+  border: 2px dashed #d1d1d1;
+  width: 100%;
+  height: 560px;
+      grid-template-areas: "uploadItem1 uploadItem1" "uploadItem2-1 uploadItem2-2";
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+#uploadSection .uploadContainer:hover {
+  background-color: rgba(209, 209, 209, 0.2);
+  cursor: pointer;
+}
+
+#uploadSection .uploadContainer .uploadItem1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: uploadItem1;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div {
+  margin-top: 140px;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div img {
+  padding-left: 16px;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div .Mb {
+  display: inline-block;
+  visibility: hidden;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div a {
+  color: navy;
+}
+
+#uploadSection .uploadContainer .uploadItem2-1 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: uploadItem2-1;
+  place-self: center;
+  -ms-grid-column-align: right;
+      justify-self: right;
+  padding: 10px;
+}
+
+#uploadSection .uploadContainer .uploadItem2-2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: uploadItem2-2;
+  place-self: center;
+  -ms-grid-column-align: left;
+      justify-self: left;
+  padding: 10px;
+}
+
+#uploadSection .uploadItem3 hr {
+  border: 0.5px solid #d1d1d1;
+}
+
+#uploadSection .uploadItem3 p {
+  display: inline;
+  font-size: 12px;
+}
+
+#uploadSection .uploadItem3 #uploadBtn {
+  float: right;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button {
+  line-height: 32px;
+  border-radius: 5px;
+  padding: 0 11px;
+  font-size: 14px;
+  margin-left: 10px;
+  cursor: pointer;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button:hover {
+  border: 0.5px solid black;
+  color: black;
+}
+
+@media screen and (max-width: 480px) {
+  #uploadSection .uploadContainer {
+    height: 400px;
+  }
+  #uploadSection .uploadContainer .uploadItem1 .Lt {
+    visibility: hidden;
+  }
+  #uploadSection .uploadContainer .uploadItem1 .Mb {
+    visibility: visible;
+    display: inline-block;
+  }
+  #uploadSection .uploadContainer .uploadItem2-1 {
+    display: none;
+  }
+  #uploadSection .uploadContainer .uploadItem2-2 {
+    display: none;
+  }
+  #uploadSection .uploadItem3 {
+    text-align: center;
+  }
+  #uploadSection .uploadItem3 #uploadBtn {
+    width: 100%;
+  }
+  #uploadSection .uploadItem3 #uploadBtn button {
+    width: 96%;
+    margin: 2%;
+  }
+}
+/*# sourceMappingURL=main.css.map */
