change color of like.html

--- a/style/_like.scss
+++ b/style/_like.scss
@@ -94,11 +94,11 @@ body {
     p {
       display: block;
       margin: 10px;
-      background-color: rgb(210, 210, 210);
+      background-color: $unactive-btn-color;
     }
     a {
       text-decoration: none;
-      color: black;
+      color: $unactive-font-color;
     }
   }
   /* for mobile phone */
