btn color change

--- a/style/main.css
+++ b/style/main.css
@@ -1,7 +1,6 @@
 #uploadSection {
   width: 90%;
   margin: 0 5%;
-  color: #101010;
 }
 
 #uploadSection .uploadContainer {
@@ -97,7 +96,7 @@
 }
 
 #uploadSection .uploadItem3 #uploadBtn button#CancelBtn {
-  background-color: #eeeeee;
+  background-color: white;
 }
 
 #uploadSection .uploadItem3 #uploadBtn button#PublishBtn {
