--- a/style/_toppage.scss
+++ b/style/_toppage.scss
@@ -2,6 +2,13 @@
 $categories-text: #767676;
 $categories-text-active: #111111;
 
+@mixin button($height, $background-color, $border-radius, $line-height) {
+  height: $height;
+  line-height: $line-height;
+  background-color: $background-color;
+  border-radius: $border-radius;
+}
+
 body, html {
   height: 100%;
 }
@@ -39,6 +46,7 @@ body, html {
 .hero-image {
   width: 100%;
   height: 600px;
+  margin-bottom: 48px;
   background-image: linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('../imgs/toppage/hero.jpeg');
   background-repeat: no-repeat;
   background-position: center;
@@ -76,3 +84,74 @@ body, html {
 }
 
 // main
+main {
+  width: 80%;
+  margin: 0 auto;
+  .container {
+    column-count: 3;
+    column-gap: 24px;
+    .wrapper {
+      background-color: #000000;
+    }
+    figure {
+      position: relative;
+      margin-bottom: 24px;
+      &:hover {
+        opacity: 0.9;
+      }
+      img {
+        width: 100%;
+        height: 100%;
+        margin-bottom: -4px;
+      }
+      .wrapper-top {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+        display: flex;
+        .button {
+          @include button(32px, #ffffff, 4px, 32px);
+          button {
+            padding: 0 11px;
+          }
+          &:first-child {
+            margin-right: 10px;
+          }
+        }
+      }
+      .wrapper-bottom {
+        position: absolute;
+        bottom: 20px;
+        display: flex;
+        width: 100%;
+        padding: 0 12px;
+        .user {
+          height: 32px;
+          line-height: 32px;
+          a {
+            display: flex;
+            text-decoration: none;
+            img {
+              width: 32px;
+              height: 32px;
+              margin-right: 10px;
+              border-radius: 50%;
+            }
+            p {
+              color: #ffffff;
+            }
+          }
+        }
+        .download {
+          margin-left: auto;
+          .button {
+            @include button(32px, #ffffff, 4px, 32px);
+            button {
+              padding: 0 11px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
