--- a/style/_account.scss
+++ b/style/_account.scss
@@ -1,10 +1,10 @@
 @import "./colorFont";
 
 .body{
-   width: 100%;
-   height: 100%;
-   text-align: center;
-}
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    }
 .account_container{
     display: flex;
     width: 100%;
@@ -74,41 +74,37 @@
     color: white;
     }
 .followbutton{
-    margin:0 0 0 80px;
-    
-}
-
-    @media only screen and (max-width: 480px) {
-        .account_container{
-            width: 480px;
-        }
-        .account_box1{
-           width: 50%;
-            }
-          
-        .account_box{
-            width: 50%;
-        .fotter {
-            width: 25%;
-        }
-        @media(max-width: 400px){
-            .wrapper {
-              grid-template-columns: 1fr;
-            }
-          }
+    margin:0 0 0 80px 
     }
-} 
-  
-  .wrapper {
+
+.wrapper {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr;
     grid-gap: 2px;
-    
-  }
-  .account_art{
-      width: 330px;
-      height: 250px;
-     
-  }
-  
+    }
+    .account_art{
+        width: 330px;
+        height: 250px; 
+        }
+
+@media only screen and (max-width: 480px) {
+    .account_container{
+        width: 480px;
+        }
+    .account_box1{
+        width: 50%;
+        }
+    .account_box{
+        width: 50%;
+    }
+    .wrapper {
+        grid-template-columns: 1fr;
+        grid-auto-rows: 200px;
+        justify-content: center;
+        }
+    .account_art{
+        width: 483px;
+        height: 250px;
+    }
+}
