--- a/style/_footer.scss
+++ b/style/_footer.scss
@@ -1,16 +1,19 @@
 @import "./colorFont";
+.html{
+    width: 100%;
+}
 .body{
-    width: 1000px;
+    width: 100%;
     height: 100%;
     text-align: center;
     }
 .footer{
      display: flex;
      justify-content: center;
-     padding-top: 40px;
-     margin-top: 60px;
-     width: 1300px;
-     height: 120px;
+     margin-top:30px ;
+     padding: 20px 0;
+     width: 100%;
+     height: 20%;
      background-color: rgb(199, 194, 194);
     }
 .footer_message{
@@ -27,7 +30,6 @@
      margin-top: 60px;
      width: 100%;
      height: 120px;
-
     }
 .btn-flat-border5 {
     display: flex;
