back button added

--- a/style/_upload.scss
+++ b/style/_upload.scss
@@ -3,8 +3,22 @@
 $uploadBdColor:#d1d1d1;
 
 #uploadSection{
+    color:#101010;
     width: 90%;
     margin: 0 5%;
+    h3{
+       float:left;
+    }
+    .back{
+        text-align:right;
+        padding:20px 0 20px 20px;
+
+        a{
+            text-decoration: none;
+            color:#101010;
+            font-size:25px;
+        }
+    }
 
     .uploadContainer{
     display:grid;
