--- a/style/main.css
+++ b/style/main.css
@@ -284,6 +284,10 @@ body {
   transition: .4s;
 }
 
+.html {
+  width: 400%;
+}
+
 body {
   font-family: 'Roboto', sans-serif;
 }
@@ -493,12 +497,176 @@ h6 {
   }
 }
 
-.photo_collection {
+body {
+  font-size: 16px;
+  padding: 0 20px;
+}
+
+h2, h1, p, img {
+  margin: 0;
+}
+
+.page_title_wrap {
+  width: 100%;
+  margin: 60px 0 70px 0;
+}
+
+.page_title_wrap .page_title {
+  width: 50%;
+  color: #101010;
+}
+
+.page_title_wrap .page_title h1 {
+  font-size: 3em;
+  font-weight: 700;
+  margin-bottom: 20px;
+}
+
+.page_title_wrap .page_title p {
+  font-size: 1.1em;
+  line-height: 1.6em;
+}
+
+.page_title_wrap .page_title p a {
+  text-decoration: none;
+  color: #6d6d6d;
+}
+
+.photo_cpllection_wrap {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.photo_cpllection_wrap .photo_collection {
+  width: 32%;
   display: -ms-grid;
   display: grid;
-  -ms-grid-columns: 85% 15%;
-      grid-template-columns: 85% 15%;
+  -ms-grid-columns: 70% 30%;
+      grid-template-columns: 70% 30%;
   grid-auto-rows: minmax(1fr, auto);
+  margin-bottom: 40px;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_b {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 1;
+  grid-column: 1 / 2;
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  grid-row: 1/3;
+  background-color: #fff;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_b img {
+  width: 100%;
+  height: auto;
+  margin: 0 auto;
+  display: block;
+  border-radius: 5px 0 0 5px;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_b img:hover {
+  opacity: 0.8;
+}
+
+.photo_cpllection_wrap .photo_collection #photo_s_up img {
+  border-radius: 0 5px 0 0;
+  margin-bottom: 2px;
+}
+
+.photo_cpllection_wrap .photo_collection #photo_s_up {
+  margin-bottom: 2px;
+}
+
+.photo_cpllection_wrap .photo_collection #photo_s_bottom img {
+  border-radius: 0 0 5px 0;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_s {
+  -ms-grid-column: 2;
+  -ms-grid-column-span: 1;
+  grid-column: 2 / 3;
+  margin-left: 2px;
+  background-color: #fff;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_s img {
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  display: block;
+}
+
+.photo_cpllection_wrap .photo_collection .photo_s img:hover {
+  opacity: 0.8;
+}
+
+.photo_cpllection_wrap .photo_collection h2 {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  font-size: 1.2em;
+  margin: 10px 0;
+}
+
+.photo_cpllection_wrap .photo_collection p {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  font-size: 0.9em;
+  color: #6d6d6d;
+  margin-bottom: 13px;
+}
+
+.photo_cpllection_wrap .photo_collection .category_wrap {
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-column: 1 / 3;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.photo_cpllection_wrap .photo_collection .category_wrap a {
+  text-decoration: none;
+}
+
+.photo_cpllection_wrap .photo_collection .category_wrap .category {
+  background-color: #eeeeee;
+  color: #6d6d6d;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+  cursor: pointer;
+  padding: 5px 8px;
+  border-radius: 2px;
+  margin-right: 8px;
+  font-size: 0.9em;
+}
+
+.photo_cpllection_wrap .photo_collection .category_wrap .category:hover {
+  color: #101010;
+}
+
+@media screen and (max-width: 480px) {
+  body {
+    padding: 0 8px;
+  }
+  .page_title_wrap .page_title {
+    width: 100%;
+  }
+  .photo_cpllection_wrap {
+    display: block;
+  }
+  .photo_cpllection_wrap .photo_collection {
+    width: 100%;
+  }
 }
 
 body {
@@ -542,8 +710,9 @@ body {
       -ms-flex-align: end;
           align-items: flex-end;
   /* 子要素をflexboxにより中央に配置する */
-  width: 50%;
+  width: 40%;
   height: 400px;
+  padding-right: 50px;
 }
 
 .account_box {
@@ -639,6 +808,399 @@ body {
   height: 250px;
 }
 
+@media only screen and (max-width: 480px) {
+  .body {
+    width: 100%;
+  }
+  .account_container {
+    width: 480px;
+    margin: 0 0 0 200px;
+  }
+  .account_box1 {
+    margin: 0 0 0 100px;
+    width: 20%;
+  }
+  .account_box {
+    width: 30%;
+  }
+  .fotter {
+    width: 300%;
+  }
+  .wrapper {
+    -ms-grid-columns: 1fr;
+        grid-template-columns: 1fr;
+    grid-auto-rows: 200px;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin: 0px;
+  }
+  .account_art {
+    width: 483px;
+    height: 250px;
+  }
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.like {
+  /* for mobile phone */
+}
+
+.like .back {
+  background-color: white;
+  width: 100%;
+  height: 30px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  font-size: 30px;
+  color: #6d6d6d;
+}
+
+.like .buttonSet {
+  margin: auto 0px;
+}
+
+.like .buttonSet .gray {
+  background-color: white;
+  border-radius: 10%;
+  padding: 8px 22px;
+  border: 1px solid #6d6d6d;
+  font-size: 15px;
+  color: #6d6d6d;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.like .buttonSet .gray:hover {
+  background-color: white;
+  border-radius: 10%;
+  padding: 8px 22px;
+  border: 1px solid black;
+  font-size: 15x;
+  color: black;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.like .buttonSet .colored {
+  background-color: green;
+  border-radius: 10%;
+  padding: 8px 22px;
+  border: 1px solid green;
+  border: none;
+  font-size: 15px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.like .buttonSet .colored:hover {
+  background-color: rgba(0, 128, 0, 0.884);
+  border-radius: 10%;
+  padding: 8px 22px;
+  border: 1px solid rgba(0, 128, 0, 0.884);
+  border: none;
+  font-size: 15px;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  margin: 4px 2px;
+  cursor: pointer;
+}
+
+.like .forMobile {
+  visibility: hidden;
+}
+
+.like .likeHeader {
+  position: -webkit-sticky;
+  position: sticky;
+  top: 30px;
+  background-color: white;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  background-color: 0;
+}
+
+.like .likeHeader .buttonSet {
+  margin-right: 20px;
+}
+
+.like .likeHeader .accountIcon {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.like .likeHeader .accountIcon .accountInfo {
+  line-height: 6px;
+  margin: auto 10px;
+}
+
+.like .likeHeader .accountIcon img {
+  width: 80px;
+  margin: 20px;
+  border-radius: 50%;
+}
+
+.like .likeContainer {
+  width: 90%;
+  margin: 30px auto;
+}
+
+.like .likeContainer .mainPic {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.like .likeContainer .mainPic img {
+  width: 100%;
+}
+
+.like .likeContainer .info {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  text-align: left;
+}
+
+.like .subPic {
+  margin-top: 30px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.like .subPic img {
+  width: 30%;
+  margin: 0 auto;
+}
+
+.like .tags {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.like .tags p {
+  display: block;
+  margin: 10px;
+  background-color: #eeeeee;
+}
+
+.like .tags a {
+  text-decoration: none;
+  color: #6d6d6d;
+}
+
+@media (max-width: 480px) {
+  .like .forDesktop {
+    visibility: hidden;
+    position: absolute;
+    top: 0;
+  }
+  .like .forMobile {
+    visibility: visible;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+  }
+  .like .subPic {
+    margin-top: 30px;
+    display: block;
+  }
+  .like .subPic img {
+    width: 100%;
+    margin: 0 auto;
+  }
+}
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
+#uploadSection {
+  color: #101010;
+  width: 90%;
+  margin: 0 5%;
+}
+
+#uploadSection h3 {
+  float: left;
+}
+
+#uploadSection .back {
+  text-align: right;
+  padding: 20px 0 20px 20px;
+}
+
+#uploadSection .back a {
+  text-decoration: none;
+  color: #101010;
+  font-size: 25px;
+}
+
+#uploadSection .uploadContainer {
+  display: -ms-grid;
+  display: grid;
+  border: 2px dashed #d1d1d1;
+  width: 100%;
+  height: 460px;
+      grid-template-areas: "uploadItem1 uploadItem1" "uploadItem2-1 uploadItem2-2";
+  -ms-grid-columns: 50% 50%;
+      grid-template-columns: 50% 50%;
+  font-size: 14px;
+  line-height: 20px;
+}
+
+#uploadSection .uploadContainer:hover {
+  background-color: rgba(209, 209, 209, 0.2);
+  cursor: pointer;
+}
+
+#uploadSection .uploadContainer .uploadItem1 {
+  -ms-grid-row: 1;
+  -ms-grid-column: 1;
+  -ms-grid-column-span: 2;
+  grid-area: uploadItem1;
+  width: 100%;
+  margin: 0 auto;
+  text-align: center;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div {
+  margin-top: 140px;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div img {
+  padding-left: 16px;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div .Mb {
+  display: none;
+}
+
+#uploadSection .uploadContainer .uploadItem1 div a {
+  color: navy;
+}
+
+#uploadSection .uploadContainer .uploadItem2-1 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 1;
+  grid-area: uploadItem2-1;
+  place-self: center;
+  -ms-grid-column-align: right;
+      justify-self: right;
+  padding: 10px;
+}
+
+#uploadSection .uploadContainer .uploadItem2-2 {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: uploadItem2-2;
+  place-self: center;
+  -ms-grid-column-align: left;
+      justify-self: left;
+  padding: 10px;
+}
+
+#uploadSection .uploadItem3 hr {
+  border: 0.5px solid #d1d1d1;
+}
+
+#uploadSection .uploadItem3 p {
+  display: inline;
+  font-size: 12px;
+}
+
+#uploadSection .uploadItem3 #uploadBtn {
+  float: right;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button {
+  line-height: 32px;
+  border-radius: 5px;
+  padding: 0 11px;
+  font-size: 14px;
+  margin-left: 10px;
+  cursor: pointer;
+  color: #767676;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button:hover {
+  border: 0.5px solid black;
+  color: black;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button#CancelBtn {
+  background-color: white;
+}
+
+#uploadSection .uploadItem3 #uploadBtn button#PublishBtn {
+  background-color: #eeeeee;
+}
+
+@media screen and (max-width: 480px) {
+  #uploadSection .uploadContainer {
+    height: 400px;
+  }
+  #uploadSection .uploadContainer .uploadItem1 div .Lt {
+    display: none;
+  }
+  #uploadSection .uploadContainer .uploadItem1 div .Mb {
+    display: block;
+    padding-right: 16px;
+  }
+  #uploadSection .uploadContainer .uploadItem2-1 {
+    display: none;
+  }
+  #uploadSection .uploadContainer .uploadItem2-2 {
+    display: none;
+  }
+  #uploadSection .uploadItem3 {
+    text-align: center;
+  }
+  #uploadSection .uploadItem3 #uploadBtn {
+    width: 100%;
+  }
+  #uploadSection .uploadItem3 #uploadBtn button {
+    width: 96%;
+    margin: 2%;
+  }
+  #uploadSection .uploadItem3 #uploadBtn button#CancelBtn {
+    display: none;
   }
 }
 /*# sourceMappingURL=main.css.map */
