Fix: change class name

--- a/style/_toppage.scss
+++ b/style/_toppage.scss
@@ -98,7 +98,7 @@ main {
     .wrapper-top-mb {
       display: none;
     }
-    .wrapper {
+    .wrapper-figure {
       background-color: #000000;
     }
     figure {
