--- a/style/main.css
+++ b/style/main.css
@@ -1237,6 +1237,7 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 30px;
+  background-color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
