--- a/style/_like.scss
+++ b/style/_like.scss
@@ -39,6 +39,7 @@ body {
   .likeHeader {
     position: sticky;
     top: 30px;
+    background-color: white;
 
     display: flex;
     justify-content: space-between;
