--- a/style/_toppage.scss
+++ b/style/_toppage.scss
@@ -122,6 +122,10 @@ main {
           @include button(32px, #ffffff, 4px, 32px);
           button {
             padding: 0 11px;
+            a {
+              color: #111111;
+              text-decoration: none;
+            }
           }
           &:first-child {
             margin-right: 10px;
